src/snapshots/hostlist_parser__tests__disjoint_digits-3.snap
---
source: src/lib.rs
expression: "disjoint_digits().easy_parse(\"1,2,006,0007,3-5\")"
---
Ok(
    (
        Disjoint(
            [
                (
                    0,
                    1,
                ),
                (
                    0,
                    2,
                ),
                (
                    2,
                    6,
                ),
                (
                    3,
                    7,
                ),
            ],
        ),
        ",3-5",
    ),
)
