src/snapshots/hostlist_parser__tests__disjoint_digits.snap
---
source: src/lib.rs
expression: "disjoint_digits().easy_parse(\"1,2,3,4,5]\")"
---
Ok(
    (
        Disjoint(
            [
                1,
                2,
                3,
                4,
                5,
            ],
        ),
        "]",
    ),
)
