src/snapshots/hostlist_parser__tests__hostlist-2.snap
---
source: src/lib.rs
expression: "hostlist().easy_parse(\"oss[1,2].local\")"
---
Ok(
    (
        [
            String(
                "oss",
            ),
            Range(
                [
                    Disjoint(
                        [
                            (
                                0,
                                1,
                            ),
                            (
                                0,
                                2,
                            ),
                        ],
                    ),
                ],
            ),
            String(
                ".local",
            ),
        ],
        "",
    ),
)
