src/snapshots/hostlist_parser__tests__hostlists-2.snap
---
source: src/lib.rs
expression: "hostlists().easy_parse(\"oss[1,2].local\")"
---
Ok(
    (
        [
            [
                String(
                    "oss",
                ),
                Range(
                    [
                        Disjoint(
                            [
                                (
                                    0,
                                    1,
                                ),
                                (
                                    0,
                                    2,
                                ),
                            ],
                        ),
                    ],
                ),
                String(
                    ".local",
                ),
            ],
        ],
        "",
    ),
)
