src/snapshots/hostlist_parser__tests__hostlists-3.snap
---
source: src/lib.rs
expression: "hostlists().easy_parse(\"hostname[2,6,7].iml.com,hostname[10,11-12,2-3,5].iml.com,hostname[15-17].iml.com\")"
---
Ok(
    (
        [
            [
                String(
                    "hostname",
                ),
                Range(
                    [
                        Disjoint(
                            [
                                2,
                                6,
                                7,
                            ],
                        ),
                    ],
                ),
                String(
                    ".iml.com",
                ),
            ],
            [
                String(
                    "hostname",
                ),
                Range(
                    [
                        Disjoint(
                            [
                                10,
                            ],
                        ),
                        Range(
                            0,
                            11,
                            12,
                        ),
                        Range(
                            0,
                            2,
                            3,
                        ),
                        Disjoint(
                            [
                                5,
                            ],
                        ),
                    ],
                ),
                String(
                    ".iml.com",
                ),
            ],
            [
                String(
                    "hostname",
                ),
                Range(
                    [
                        Range(
                            0,
                            15,
                            17,
                        ),
                    ],
                ),
                String(
                    ".iml.com",
                ),
            ],
        ],
        "",
    ),
)
