src/snapshots/hostlist_parser__tests__hostlists.snap
---
source: src/lib.rs
expression: "hostlists().easy_parse(\"oss1.local\")"
---
Ok(
    (
        [
            [
                String(
                    "oss1.local",
                ),
            ],
        ],
        "",
    ),
)
