src/snapshots/hostlist_parser__tests__leading_zeros-2.snap
---
source: src/lib.rs
expression: "leading_zeros().easy_parse(\"0001\")"
---
Ok(
    (
        (
            3,
            1,
        ),
        "",
    ),
)
