src/snapshots/hostlist_parser__tests__leading_zeros-7.snap
---
source: src/lib.rs
expression: "leading_zeros().easy_parse(\"042\")"
---
Ok(
    (
        (
            1,
            42,
        ),
        "",
    ),
)
